[tool.poetry]
name = "waybar-cbond-index"
version = "0.1.0"
description = ""
authors = ["martin <yang.ruoqi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
