[project]
name = "waybar-cbond-index"
version = "0.1.0"
description = ""
authors = [
    {name = "martin",email = "yang.ruoqi@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
wci = "waybar_cbond_index:main"

[tool.poetry.dependencies]
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
